[package]
name = "s"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chia = "0.15.0"
chia-wallet-sdk = { version = "0.19.1", features = ["rustls"] }
clvmr = "0.9.0"
hex = "0.4.3"
hex-literal = "0.4.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["hex"] }
tokio = { version = "1.41.1", features = ["full"] }
